[tool.poetry]
name = "lambda-simulator"
version = "0.1.0"
description = ""
authors = ["Johan Bothin <johan.bothin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
moto = "^3.0.0"
boto3 = "^1.20.35"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pytest-aiohttp = "^1.0.3"
pytest-asyncio = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
